# GraphSpider

./: .gitignore  IMPLEMENTATION_PLAN.md  PROJECT_INTRO.md  PROJECT_STRUCTURE.md  README.md  README_zh.md  ZHIHU_POST.md  autonomous_test_entry.py  pyproject.toml  run.py
scrapegraphai/: __init__.py  cli.py
scrapegraphai/agent/: __init__.py  agent_loop.py  autonomous_graph.py  config.py  diff_applier.py  error_classifier.py  evaluate_node.py  execute_node.py  reflect_and_fix_node.py  reflect_prompts.py  smart_reflector.py
scrapegraphai/agent/executors/: __init__.py  base_executor.py  local_executor.py
scrapegraphai/agent/state/: __init__.py  autonomous_state.py
scrapegraphai/docloaders/: chromium.py
scrapegraphai/graphs/: __init__.py  abstract_graph.py  base_graph.py  script_creator_graph.py  script_creator_multi_graph.py
scrapegraphai/integrations/: __init__.py
scrapegraphai/nodes/: __init__.py  fetch_node.py  generate_scraper_node.py  merge_generated_scripts_node.py  parse_node.py
scrapegraphai/prompts/: __init__.py  merge_generated_scripts_prompts.py
scrapegraphai/telemetry/: telemetry.py
scrapegraphai/utils/: __init__.py  cleanup_html.py
