[project]
name = "graphspider"
version = "3.0.0"
description = "Autonomous web scraper agent with self-healing ReAct loop. Give it a URL + description, get clean structured data."
authors = [
    { name = "GraphSpider Contributors" },
]
dependencies = [
    "langchain>=1.2.0",
    "langchain-classic>=1.0.0",
    "langchain-openai>=1.1.6",
    "langchain_community>=0.4.0",
    "langgraph>=0.2.0",
    "beautifulsoup4>=4.14.3",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "minify-html>=0.18.1",
    "playwright>=1.57.0",
    "undetected-playwright>=0.3.0",
    "semchunk>=3.2.5",
    "async-timeout>=4.0.0",
    "simpleeval>=1.0.3",
    "duckduckgo-search>=8.1.1",
    "pydantic>=2.12.5",
]
readme = "README.md"
homepage = "https://github.com/handsome-bond/GraphSpider"
repository = "https://github.com/handsome-bond/GraphSpider"
keywords = [
    "scraping", "web scraping", "agent", "ai agent",
    "llm", "playwright", "autonomous", "self-healing",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11, <4.0"

[project.scripts]
graphspider = "scrapegraphai.cli:main"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"
